# apps/bot-server/src/api/generated/swagger.json
@@ -403,6 +403,14 @@
 						},
 						"type": "array"
 					},
+					"challengeTtlMinutes": {
+						"type": "number",
+						"format": "double"
+					},
+					"maxPendingChallenges": {
+						"type": "number",
+						"format": "double"
+					},
 					"createdAt": {
 						"type": "string",
 						"format": "date-time"
@@ -418,6 +426,8 @@
 					"maxDelta",
 					"isEnabled",
 					"questTargets",
+					"challengeTtlMinutes",
+					"maxPendingChallenges",
 					"createdAt",
 					"updatedAt"
 				],
@@ -442,6 +452,14 @@
 							"$ref": "#/components/schemas/DuelQuestTargetDto"
 						},
 						"type": "array"
+					},
+					"challengeTtlMinutes": {
+						"type": "number",
+						"format": "double"
+					},
+					"maxPendingChallenges": {
+						"type": "number",
+						"format": "double"
 					}
 				},
 				"type": "object",
